--- a/frontend/goelectric/package.json
+++ b/frontend/goelectric/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
