--- a/flutter/go_electric/android/app/src/main/AndroidManifest.xml
+++ b/flutter/go_electric/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.go_electric">
-   <application
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <application
         android:label="go_electric"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -30,5 +33,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <service
+            android:name="MyNavigationService"
+            android:foregroundServiceType="location">
+        </service>
     </application>
 </manifest>
