--- a/flutter/go_electric/pubspec.yaml
+++ b/flutter/go_electric/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_background_service: ^1.0.4
   geolocator: ^8.2.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
