--- a/frontend/goelectric/package.json
+++ b/frontend/goelectric/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "swiper": "^8.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
